// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaSwitch default 1`] = `
<va-input-wrapper-stub messages="" errormessages="" errorcount="1" class="va-switch">
  <div tabindex="-1" class="va-switch__container">
    <div class="va-switch__inner"><input type="checkbox" role="switch" readonly="readonly" class="va-switch__input">
      <div class="va-switch__track" style="background-color: gray;">
        <div class="va-switch__track-label">

        </div>
        <div class="va-switch__checker-wrapper"><span class="va-switch__checker"><!----></span></div>
      </div>
    </div>
    <div class="va-switch__label">

    </div>
  </div>
</va-input-wrapper-stub>
`;

exports[`VaSwitch true value 1`] = `
<va-input-wrapper-stub messages="" errormessages="" errorcount="1" class="va-switch va-switch--checked">
  <div tabindex="-1" class="va-switch__container">
    <div class="va-switch__inner"><input type="checkbox" role="switch" aria-checked="true" readonly="readonly" class="va-switch__input">
      <div class="va-switch__track" style="background-color: rgb(0, 0, 0);">
        <div class="va-switch__track-label">

        </div>
        <div class="va-switch__checker-wrapper"><span class="va-switch__checker"><!----></span></div>
      </div>
    </div>
    <div class="va-switch__label">

    </div>
  </div>
</va-input-wrapper-stub>
`;
